[package]
name = "wurstenstein-psp"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = { version = "0.2.32", default-features = false, features = ["libm"] }
heapless = "0.9.3"
libm = "0.2.16"
psp = { path = "../rust-psp/psp" }
assets = { path = "./crates/assets" }
modplay = { path = "./crates/MODPlay" }
parry2d = { version = "0.28.0", default-features = false, features = ["f32", "required-features"] }
once_cell_no_std = "0.1.1"

[profile.release]
lto = true
codegen-units = 1
# panic = "abort"
opt-level = 3
# debug = true
strip = false
