[package]
name = "assets"
version = "0.1.0"
edition = "2024"

[dependencies]
wincode = { version = "0.5.4", default-features = false, features = ["alloc", "derive"] }
wincode-derive = { version = "0.4.5" }

[build-dependencies]
wincode = { version = "0.5.4", features = ["derive"] }
wincode-derive = { version = "0.4.5" }
image = { version = "0.25.9", default-features = false, features = ["rayon", "png"] }
tobj = "4.0.3"
